--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -5,4 +5,6 @@ repositories {
 }
 dependencies {
     compile 'org.testng:testng:6.9.10'
+    implementation 'org.seleniumhq.selenium:selenium-java:4.5.3'
+
 }
