лекции 6.1 - 6.6 про работу с файлами и генераторы

--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -7,5 +7,8 @@ dependencies {
     compile 'org.testng:testng:6.9.10'
     implementation 'org.seleniumhq.selenium:selenium-java:4.5.3'
     implementation 'org.hamcrest:java-hamcrest:2.0.0.0'
+    //библиотека для командной строки
+    implementation 'com.beust:jcommander:1.48'
+    implementation 'com.thoughtworks.xstream:xstream:1.4.18'
 
 }
