--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -9,6 +9,9 @@ dependencies {
     implementation 'org.hamcrest:java-hamcrest:2.0.0.0'
     //библиотека для командной строки
     implementation 'com.beust:jcommander:1.48'
+    //для xml
     implementation 'com.thoughtworks.xstream:xstream:1.4.18'
+    //для json
+    implementation 'com.google.code.gson:gson:2.10'
 
 }
