--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -15,6 +15,8 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.10'
     //для работы с логами
     implementation 'ch.qos.logback:logback-classic:1.1.5'
+    //для БД MySql
+    implementation 'mysql:mysql-connector-java:5.1.48'
 }
 //указали использовать фреймворк TestNG
 task testGroups(type: Test) {
