--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -19,10 +19,20 @@ dependencies {
     implementation 'mysql:mysql-connector-java:5.1.48'
     implementation 'org.hibernate:hibernate-core:5.6.10.Final'
 }
-//указали использовать фреймворк TestNG
+
 task testGroups(type: Test) {
     useTestNG {
         suites 'src/test/resources/testng-groups.xml'
+    }
+    if (project.hasProperty('browser')) {
+        systemProperty 'browser', "${browser}"
+    }
+
+    if (project.hasProperty('target')) {
+        systemProperty 'target', "${target}"
+    }
+    if (project.hasProperty('groupVerifyUI')) {
+        systemProperty 'groupVerifyUI', "${groupVerifyUI}"
     }
 }
 
@@ -30,11 +40,14 @@ task testContacts(type: Test) {
     useTestNG {
         suites 'src/test/resources/testng-contacts.xml'
     }
-}
-if (project.hasProperty('browser')) {
-    systemProperty 'browser', "${browser}"
-}
+    if (project.hasProperty('browser')) {
+        systemProperty 'browser', "${browser}"
+    }
 
-if (project.hasProperty('target')) {
-    systemProperty 'browser', "${browser}"
+    if (project.hasProperty('target')) {
+        systemProperty 'target', "${target}"
+    }
+    if (project.hasProperty('contactVerifyUI')) {
+        systemProperty 'contactVerifyUI', "${contactVerifyUI}"
+    }
 }
