--- a/mantis-tests/build.gradle
+++ b/mantis-tests/build.gradle
@@ -7,8 +7,9 @@ dependencies {
     compile 'org.testng:testng:7.5'
     implementation 'org.seleniumhq.selenium:selenium-java:4.3.0'
     implementation 'org.hamcrest:java-hamcrest:2.0.0.0'
+    implementation 'org.apache.httpcomponents:httpclient:4.5.14'
 }
-test {
+task testLogin (type: Test)  {
     useTestNG {
         suites 'src/test/resources/testng.xml'
     }
