--- a/mantis-tests/build.gradle
+++ b/mantis-tests/build.gradle
@@ -9,6 +9,8 @@ dependencies {
     implementation 'org.hamcrest:java-hamcrest:2.0.0.0'
     implementation 'org.apache.httpcomponents:httpclient:4.5.14'
     implementation 'commons-net:commons-net:3.9.0'
+    implementation 'org.subethamail:subethasmtp:3.1.7'
+    implementation 'ru.lanwen.verbalregex:java-verbal-expressions:1.8'  
 }
 task testLogin (type: Test)  {
     useTestNG {
@@ -21,6 +23,7 @@ task testLogin (type: Test)  {
     if (project.hasProperty('target')) {
         systemProperty 'target', "${target}"
     }
+
     if (project.hasProperty('verifyUI')) {
         systemProperty 'verifyUI', "${verifyUI}"
     }
