--- a/mantis-tests/build.gradle
+++ b/mantis-tests/build.gradle
@@ -10,7 +10,8 @@ dependencies {
     implementation 'org.apache.httpcomponents:httpclient:4.5.14'
     implementation 'commons-net:commons-net:3.9.0'
     implementation 'org.subethamail:subethasmtp:3.1.7'
-    implementation 'ru.lanwen.verbalregex:java-verbal-expressions:1.8'  
+    implementation 'ru.lanwen.verbalregex:java-verbal-expressions:1.8'
+    implementation 'biz.futureware.mantis:mantis-axis-soap-client:1.2.19'
 }
 task testLogin (type: Test)  {
     useTestNG {
