Лекция 10.1. Сервер непрерывной интеграции

--- a/github-sample/build.gradle
+++ b/github-sample/build.gradle
@@ -1,14 +1,10 @@
 apply plugin: 'java'
 apply plugin: 'application'
-mainClassName = 'MyFirstProgram'
 
 repositories {
     mavenCentral()
 }
 dependencies {
     compile 'org.testng:testng:6.9.10'
-}
-
-test{
-    useTestNG()
+    implementation 'com.jcabi:jcabi-github:1.4.2'
 }
